// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VisualizerNavigation /> should render properly for the Assets 1`] = `
.emotion-0 {
  background-color: #252525;
  color: #808080;
  margin: 1px;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 a {
  text-transform: uppercase;
  font-weight: 500;
  padding: 8px;
  padding-left: 12px;
  padding-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-1 svg {
  margin-right: 8px;
}

.emotion-2 {
  white-space: nowrap;
  color: #6088FE;
}

.emotion-3 {
  margin-top: 8px;
  margin-bottom: 8px;
  border-left: 2px solid #191919;
}

.emotion-4 {
  white-space: nowrap;
  color: #808080;
}

.emotion-5 {
  white-space: nowrap;
  padding: 8px;
  padding-left: 12px;
  padding-right: 12px;
  font-family: Roboto Condensed;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <a
      className="emotion-2"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <svg
        data-file-name="assets.svg"
        height={20}
      />
       Assets
    </a>
    <div
      className="emotion-3"
    />
    <a
      className="emotion-4"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/data-visualization"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <svg
        data-file-name="charts.svg"
        height={20}
      />
       Data Visualization
    </a>
  </div>
  <div
    className="emotion-5"
  >
    42
     Assets
  </div>
</div>
`;

exports[`<VisualizerNavigation /> should render properly for the Data Visualization 1`] = `
.emotion-0 {
  background-color: #252525;
  color: #808080;
  margin: 1px;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 a {
  text-transform: uppercase;
  font-weight: 500;
  padding: 8px;
  padding-left: 12px;
  padding-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-1 svg {
  margin-right: 8px;
}

.emotion-2 {
  white-space: nowrap;
  color: #808080;
}

.emotion-3 {
  margin-top: 8px;
  margin-bottom: 8px;
  border-left: 2px solid #191919;
}

.emotion-4 {
  white-space: nowrap;
  color: #6088FE;
}

.emotion-5 {
  white-space: nowrap;
  padding: 8px;
  padding-left: 12px;
  padding-right: 12px;
  font-family: Roboto Condensed;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <a
      className="emotion-2"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <svg
        data-file-name="assets.svg"
        height={20}
      />
       Assets
    </a>
    <div
      className="emotion-3"
    />
    <a
      className="emotion-4"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/data-visualization"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <svg
        data-file-name="charts.svg"
        height={20}
      />
       Data Visualization
    </a>
  </div>
  <div
    className="emotion-5"
  >
    42
     Assets
  </div>
</div>
`;

exports[`<VisualizerNavigation /> should render properly without a count 1`] = `
.emotion-0 {
  background-color: #252525;
  color: #808080;
  margin: 1px;
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 a {
  text-transform: uppercase;
  font-weight: 500;
  padding: 8px;
  padding-left: 12px;
  padding-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-1 svg {
  margin-right: 8px;
}

.emotion-2 {
  white-space: nowrap;
  color: #6088FE;
}

.emotion-3 {
  margin-top: 8px;
  margin-bottom: 8px;
  border-left: 2px solid #191919;
}

.emotion-4 {
  white-space: nowrap;
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <a
      className="emotion-2"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <svg
        data-file-name="assets.svg"
        height={20}
      />
       Assets
    </a>
    <div
      className="emotion-3"
    />
    <a
      className="emotion-4"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer/data-visualization"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <svg
        data-file-name="charts.svg"
        height={20}
      />
       Data Visualization
    </a>
  </div>
</div>
`;
